--- a/package.json
+++ b/package.json
@@ -20,20 +20,20 @@
     "@types/chai": "^4.2.11",
     "@types/lodash": "^4.14.168",
     "@types/mocha": "^5.2.4",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-mocha": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "@vue/cli-plugin-babel": "~5.0.0-alpha.3",
+    "@vue/cli-plugin-eslint": "~5.0.0-alpha.3",
+    "@vue/cli-plugin-router": "~5.0.0-alpha.3",
+    "@vue/cli-plugin-typescript": "~5.0.0-alpha.3",
+    "@vue/cli-plugin-unit-mocha": "~5.0.0-alpha.3",
+    "@vue/cli-plugin-vuex": "~5.0.0-alpha.3",
+    "@vue/cli-service": "~5.0.0-alpha.3",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^1.0.3",
     "chai": "^4.1.2",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint": "^7.15.0",
+    "eslint-plugin-vue": "^7.2.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "typescript": "^4.1.3",
