--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "bulma": "https://github.com/connorshea/bulma#css-variables-with-fallback",
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.3",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
@@ -29,6 +29,7 @@
     "@vue/cli-plugin-unit-mocha": "~5.0.0-alpha.3",
     "@vue/cli-plugin-vuex": "~5.0.0-alpha.3",
     "@vue/cli-service": "~5.0.0-alpha.3",
+    "@vue/compiler-sfc": "^3.0.5",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^1.0.3",
     "chai": "^4.1.2",
@@ -36,7 +37,6 @@
     "eslint-plugin-vue": "^7.2.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
-    "typescript": "^4.1.3",
-    "vue-template-compiler": "^2.6.12"
+    "typescript": "^4.1.3"
   }
 }
