--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
     "vue": "^2.6.12",
+    "vue-apollo": "^3.0.7",
     "vue-router": "^3.5.0",
     "vuex": "^3.6.0"
   },
@@ -34,9 +35,11 @@
     "chai": "^4.1.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "graphql-tag": "^2.9.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "typescript": "^4.1.3",
+    "vue-cli-plugin-apollo": "~0.22.2",
     "vue-template-compiler": "^2.6.12"
   }
 }
