Enable type acquisition and set the vglist host URL via an env variable.
And fix some problems caused by type acquisition.

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 VUE_APP_OAUTH_CLIENT_ID=$VGLIST_EXPERIMENTAL_FRONTEND_OAUTH_ID
 VUE_APP_REDIRECT_URL=http://localhost:8080
+VUE_APP_VGLIST_HOST_URL=https://vglist.co
