--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@vue/composition-api": "^1.0.0-rc.2",
@@ -21,6 +22,7 @@
     "vuex": "^3.6.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "1.20.1",
     "@types/chai": "^4.2.11",
     "@types/lodash": "^4.14.168",
     "@types/mocha": "^5.2.4",
@@ -41,6 +43,8 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "typescript": "^4.1.5",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "@graphql-codegen/typescript": "1.21.0",
+    "@graphql-codegen/introspection": "1.18.1"
   }
 }
