Update README with development setup instructions.

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
+# NOTE: BE CAREFUL IF USING THIS ENV FILE, YOU WILL BE PLAYING WITH PRODUCTION DATA!
 VUE_APP_OAUTH_CLIENT_ID=$VGLIST_EXPERIMENTAL_FRONTEND_OAUTH_ID
 VUE_APP_REDIRECT_URL=http://localhost:8080
 VUE_APP_VGLIST_HOST_URL=https://vglist.co
