--- a/codegen.yml
+++ b/codegen.yml
@@ -1,6 +1,8 @@
 overwrite: true
 schema: "schema.graphql" # TODO: Figure out how to get this from vglist automatically.
-documents: "src/graphql/*.(graphql|gql)"
+documents:
+  - "src/graphql/*.(graphql|gql)"
+  - "src/graphql/**/*.(graphql|gql)"
 generates:
   src/generated/graphql.ts:
     plugins:
