--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "chai": "^4.1.2",
     "eslint": "^7.20.0",
     "eslint-plugin-vue": "^7.6.0",
+    "html-loader": "^1.3.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "typescript": "^4.1.5",
