--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@graphql-codegen/typescript": "^1.21.0",
     "@graphql-codegen/typescript-operations": "^1.17.14",
     "@graphql-typed-document-node/core": "^3.1.0",
+    "@types/jest": "^24.0.19",
     "@types/lodash": "^4.14.168",
     "@types/vue-select": "^3.11.1",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
@@ -38,6 +39,7 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-typescript": "^7.0.0",
