Lock villus to 1.0.0.rc16 and upgrade packages.
villus dropped Vue 2 support in 1.0.0.rc17, so we can't upgrade to that
right now.

--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
   "dependencies": {
     "@vue/composition-api": "^1.0.0-rc.6",
     "bulma": "https://github.com/connorshea/bulma#css-variables-with-fallback",
-    "core-js": "^3.6.5",
+    "core-js": "^3.13.0",
     "graphql": "^15.5.0",
-    "graphql-tag": "^2.11.0",
-    "lodash": "^4.17.20",
+    "graphql-tag": "^2.12.4",
+    "lodash": "^4.17.21",
     "timeago.js": "^4.0.2",
-    "villus": "^1.0.0-rc.15",
+    "villus": "1.0.0-rc.16",
     "vue": "^2.6.12",
     "vue-router": "^3.5.0",
     "vue-select": "^3.11.2",
-    "vuex": "^3.6.0"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.20.1",
-    "@graphql-codegen/introspection": "1.18.1",
-    "@graphql-codegen/typed-document-node": "^1.18.2",
-    "@graphql-codegen/typescript": "^1.21.0",
-    "@graphql-codegen/typescript-operations": "^1.17.14",
+    "@graphql-codegen/cli": "^1.21.4",
+    "@graphql-codegen/introspection": "1.18.2",
+    "@graphql-codegen/typed-document-node": "^1.18.5",
+    "@graphql-codegen/typescript": "^1.22.0",
+    "@graphql-codegen/typescript-operations": "^1.17.16",
     "@graphql-typed-document-node/core": "^3.1.0",
     "@types/jest": "^24.0.19",
     "@types/lodash": "^4.14.168",
     "@types/vue-select": "^3.11.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
