--- a/package.json
+++ b/package.json
@@ -10,18 +10,17 @@
     "generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@vue/composition-api": "^1.0.0-rc.6",
     "bulma": "https://github.com/connorshea/bulma#css-variables-with-fallback",
     "core-js": "^3.13.0",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
     "lodash": "^4.17.21",
     "timeago.js": "^4.0.2",
-    "villus": "1.0.0-rc.16",
-    "vue": "^2.6.12",
-    "vue-router": "^3.5.0",
-    "vue-select": "^3.11.2",
-    "vuex": "^3.6.2"
+    "villus": "1.0.0-rc.17",
+    "vue": "^3.1.0-beta.4",
+    "vue-router": "^4.0.8",
+    "vue-select": "https://github.com/wolfjagger/vue-select#tmp/vue-3-easy-install",
+    "vuex": "^4.0.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.21.4",
@@ -42,6 +41,7 @@
     "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.11",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^1.0.3",
     "eslint": "^7.20.0",
@@ -49,7 +49,6 @@
     "html-loader": "^1.3.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
-    "typescript": "^4.2.3",
-    "vue-template-compiler": "^2.6.12"
+    "typescript": "^4.2.3"
   }
 }
