--- a/package.json
+++ b/package.json
@@ -29,26 +29,28 @@
     "@graphql-codegen/typescript": "^1.22.0",
     "@graphql-codegen/typescript-operations": "^1.17.16",
     "@graphql-typed-document-node/core": "^3.1.0",
-    "@types/jest": "^24.0.19",
+    "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.168",
     "@types/vue-select": "^3.11.1",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.11",
+    "@vue/cli-plugin-babel": "5.0.0-beta.1",
+    "@vue/cli-plugin-eslint": "5.0.0-beta.1",
+    "@vue/cli-plugin-router": "5.0.0-beta.1",
+    "@vue/cli-plugin-typescript": "5.0.0-beta.1",
+    "@vue/cli-plugin-unit-jest": "5.0.0-beta.1",
+    "@vue/cli-plugin-vuex": "5.0.0-beta.1",
+    "@vue/cli-service": "5.0.0-beta.1",
+    "@vue/compiler-sfc": "^3.1.0-beta.6",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "^1.0.3",
+    "@vue/test-utils": "^2.0.0-rc.6",
     "eslint": "^7.20.0",
     "eslint-plugin-vue": "^7.6.0",
     "html-loader": "^1.3.2",
-    "node-sass": "^4.12.0",
+    "sass": "^1.34.0",
     "sass-loader": "^8.0.2",
-    "typescript": "^4.2.3"
+    "ts-jest": "^26.0.1",
+    "typescript": "^4.2.3",
+    "vue-jest": "^5.0.0-alpha.9"
   }
 }
