--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,8 @@ pages: # the job must be named pages
   image: node:latest
   stage: deploy
   script:
-    - npm ci
-    - npm run build
+    - yarn install --frozen-lockfile
+    - yarn run build
     - mv public public-vue # GitLab Pages hooks on the public folder
     - mv dist public # rename the dist folder (result of npm run build)
     # optionally, you can activate gzip support with the following line:
