--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@graphql-typed-document-node/core": "^3.1.0",
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.168",
+    "@types/node-fetch": "^2.5.10",
     "@types/vue-select": "^3.11.1",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
@@ -47,6 +48,8 @@
     "eslint": "^7.27.0",
     "eslint-plugin-vue": "^7.10.0",
     "html-loader": "^1.3.2",
+    "msw": "^0.29.0",
+    "node-fetch": "^2.6.1",
     "sass": "^1.34.0",
     "sass-loader": "^8.0.2",
     "ts-jest": "^26.0.1",
