Exclude spec files from TypeScript compilation.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,8 @@
     "tests/**/*.tsx"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "tests/**/*.spec.ts"
   ],
   "typeAcquisition": {
     "enable": true
