No longer ignore the spec files in tsconfig.
This was causing problems for the specs when viewing them in VSCode.

Fix the root problem of the prop types being passed in the spec instead.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,8 +35,7 @@
     "tests/**/*.tsx"
   ],
   "exclude": [
-    "node_modules",
-    "tests/**/*.spec.ts"
+    "node_modules"
   ],
   "typeAcquisition": {
     "enable": true
