Enable noImplicitOverride for TypeScript and some other strict checks.
Simple check that doesn't currently impact us, but may catch a
problem at some point eventually.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
     "target": "esnext",
     "module": "esnext",
     "strict": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "strictPropertyInitialization": true,
     "jsx": "preserve",
     "importHelpers": true,
     "moduleResolution": "node",
