--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -16,5 +16,7 @@ jobs:
       run: yarn install --frozen-lockfile
     - name: Lint
       run: yarn run lint
+    - name: Build
+      run: yarn run build
     - name: Test
       run: yarn run test:unit
