--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lodash": "^4.17.21",
     "timeago.js": "^4.0.2",
     "villus": "1.0.0-rc.17",
-    "vue": "^3.1.0-beta.6",
+    "vue": "^3.1.1",
     "vue-router": "^4.0.8",
     "vue-select-connorshea": "3.12.0",
     "vuex": "^4.0.1"
@@ -42,7 +42,7 @@
     "@vue/cli-plugin-unit-jest": "5.0.0-beta.1",
     "@vue/cli-plugin-vuex": "5.0.0-beta.1",
     "@vue/cli-service": "5.0.0-beta.1",
-    "@vue/compiler-sfc": "^3.1.0-beta.6",
+    "@vue/compiler-sfc": "^3.1.1",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-rc.6",
     "eslint": "^7.27.0",
@@ -54,7 +54,7 @@
     "sass-loader": "^8.0.2",
     "ts-jest": "^26.0.1",
     "typescript": "^4.3.2",
-    "vue-jest": "^5.0.0-alpha.9",
+    "vue-jest": "^5.0.0-alpha.10",
     "wait-for-expect": "^3.0.2"
   }
 }
