Specify that the application is intended to use Node 16.
Node 15 is the earliest that supports ARM Macs, so we have to use
at least 15, and 16 is the latest LTS release.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 # https://cli.vuejs.org/guide/deployment.html#gitlab-pages
 
 pages: # the job must be named pages
-  image: node:latest
+  image: node:16
   stage: deploy
   script:
     - yarn install --frozen-lockfile
