--- a/package.json
+++ b/package.json
@@ -29,31 +29,32 @@
     "@graphql-codegen/typescript": "^2.4.0",
     "@graphql-codegen/typescript-operations": "^2.4.0",
     "@graphql-typed-document-node/core": "^3.1.1",
-    "@types/jest": "^26.0.23",
+    "@testing-library/vue": "next",
+    "@types/jest": "^27.0.0",
     "@types/lodash": "^4.14.168",
     "@types/node-fetch": "^2.5.10",
     "@types/vue-select": "^3.11.1",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
-    "@vue/cli-plugin-babel": "5.0.0-beta.1",
-    "@vue/cli-plugin-eslint": "5.0.0-beta.1",
-    "@vue/cli-plugin-router": "5.0.0-beta.1",
-    "@vue/cli-plugin-typescript": "5.0.0-beta.1",
-    "@vue/cli-plugin-unit-jest": "5.0.0-beta.1",
-    "@vue/cli-plugin-vuex": "5.0.0-beta.1",
-    "@vue/cli-service": "5.0.0-beta.1",
+    "@vue/cli-plugin-babel": "5.0.0-beta.6",
+    "@vue/cli-plugin-eslint": "5.0.0-beta.6",
+    "@vue/cli-plugin-router": "5.0.0-beta.6",
+    "@vue/cli-plugin-typescript": "5.0.0-beta.6",
+    "@vue/cli-plugin-unit-jest": "5.0.0-beta.6",
+    "@vue/cli-plugin-vuex": "5.0.0-beta.6",
+    "@vue/cli-service": "5.0.0-beta.6",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-rc.21",
+    "@vue/vue3-jest": "^27.0.0",
     "eslint": "^7.27.0",
     "eslint-plugin-vue": "^7.10.0",
     "html-loader": "^1.3.2",
-    "msw": "^0.29.0",
+    "msw": "^0.30.0",
     "node-fetch": "^2.6.1",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
-    "ts-jest": "^26.0.1",
+    "ts-jest": "^27.0.0",
     "typescript": "^4.6.4",
-    "vue-jest": "^5.0.0-alpha.10",
     "wait-for-expect": "^3.0.2"
   }
 }
