--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "ts-jest": "^27.0.0",
-    "typescript": "^4.6.4",
-    "wait-for-expect": "^3.0.2"
+    "typescript": "^4.6.4"
   }
 }
