--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
     "@types/vue-select": "^3.11.1",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
-    "@vue/cli-plugin-babel": "5.0.0-beta.6",
-    "@vue/cli-plugin-eslint": "5.0.0-beta.6",
-    "@vue/cli-plugin-router": "5.0.0-beta.6",
-    "@vue/cli-plugin-typescript": "5.0.0-beta.6",
-    "@vue/cli-plugin-unit-jest": "5.0.0-beta.6",
-    "@vue/cli-plugin-vuex": "5.0.0-beta.6",
-    "@vue/cli-service": "5.0.0-beta.6",
+    "@vue/cli-plugin-babel": "5.0.4",
+    "@vue/cli-plugin-eslint": "5.0.4",
+    "@vue/cli-plugin-router": "5.0.4",
+    "@vue/cli-plugin-typescript": "5.0.4",
+    "@vue/cli-plugin-unit-jest": "5.0.4",
+    "@vue/cli-plugin-vuex": "5.0.4",
+    "@vue/cli-service": "5.0.4",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-rc.21",
     "@vue/vue3-jest": "^27.0.0",
