--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "ts-jest": "^27.0.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "vue-tsc": "^0.34.13"
   }
 }
