--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Lint, test, and typecheck
+name: Lint
 
 on: [push]
 
@@ -16,21 +16,6 @@ jobs:
       run: yarn install --frozen-lockfile
     - name: Lint
       run: yarn run lint
-  test:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Set up node
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16.x'
-    - name: Install
-      run: yarn install --frozen-lockfile
-    - name: Build
-      run: yarn run build
-    - name: Test
-      run: yarn run test:unit
   typecheck:
     runs-on: ubuntu-latest
     steps:
