--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@vue/cli-plugin-vuex": "5.0.4",
     "@vue/cli-service": "5.0.4",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "^2.0.0-rc.21",
+    "@vue/test-utils": "^2.0.0",
     "@vue/vue3-jest": "^27.0.0",
     "eslint": "^7.27.0",
     "eslint-plugin-vue": "^7.10.0",
